game scen setup

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <div id="legi-game-game" class="game"></div>
+  <div id="orientation"></div>
 
   <script src="js/lib/phaser.js"></script>
 
