about to change gameoverdisplay

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>legi-game</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- build:css main.min.css -->
   <link rel="stylesheet" href="css/main.css">
@@ -10,7 +11,8 @@
 </head>
 
 <body>
-  <div id="legi-game-game" class="game"></div>
+  <div id="legi-game-game" class="game" style="font-family: 'Heiti TC', 'Microsoft YaHei'"></div>
+  <div id="game-over"></div>
   <div id="orientation"></div>
 
   <script src="js/lib/phaser.js"></script>
