--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>一百種殺死法案的方法</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
   <meta name="description" content="「想讓一條法案活著過三讀，真的超級難！」不相信？不如你親自來死看看～">
 
   <!-- build:css main.min.css -->
@@ -12,49 +12,83 @@
 </head>
 
 <body>
-  <div class="wrapper">
+  <div id="game-wrapper">
     <div id="legi-game" class="game" style="font-family: 'Heiti TC', 'Microsoft YaHei'"></div>
-    <div id="game-over">
+    <div id="gameoverlay">
       <div id="gameover-bg"></div>
-      <img src="assets/gameover/gameover.png" id="gameover-pic" style="top: 25px">
-      <img src="" id="gameover-title" style="top: 90px">
-      <div id="death-pic" style="top: 150px"></div>
-      <div class="static-container" style="top: 450px">
-        <div id="gameover-subtitle" class="margin-small"></div>
-        <div id="gameover-desc" class="margin-small"></div>
-        <p id="game-missed" class="margin-medium">我通過了<b data-missed></b>個障礙</p>
-        <a href="#" class="btn btn-again margin-medium"></a>
-        <a href="#" class="btn btn-share margin-medium"></a>
-        <img src="assets/gameover/down.png" class="btn btn-down margin-medium">
+      <div id="gameover-wrapper">
+        <div id="gameover-header">
+          <div id="gameover-pic" style="top: 4%">
+            <img src="assets/gameover/gameover.png">
+          </div>
+          <div id="gameover-title" style="top: 16%">
+            <img src="">
+          </div>
+          <div id="death-pic" style="top: 28%"></div>
+        </div>
+        <div id="gameover-static">
+          <div id="gameover-subtitle" class="margin-small"></div>
+          <div id="gameover-desc" class="margin-medium"></div>
+          <div class="buttons" style="height: 180px">
+            <div class="btn btn-again" style="top: 0;">
+              <img src="assets/gameover/again.png">
+            </div>
+            <div class="btn btn-share" style="top: 60px;">
+              <img src="assets/gameover/share.png">
+            </div>
+            <img src="assets/gameover/down.png" class="btn btn-down margin-medium" style="top: 150px;">
+          </div>
+        </div>
+        <div id="info">
+          <div class="info-title margin-medium hide-win" data-sr="enter bottom, over 1s">
+            <img src="assets/gameover/others.png">
+          </div>
+          <div id="law"></div>
+          <!-- <img src="assets/gameover/down.png" class="btn-down margin-large hide-win"> -->
+          <div id="overview" class="row-container">
+            <div class="info-title margin-medium" data-sr="enter bottom, over 1s">
+              <img src="assets/overview/title.png">
+            </div>
+            <div class="row" id="section-title">
+              <div class="col-xs-4 active">
+                <p class="title">程序委員會</p>
+              </div>
+              <div class="col-xs-4">
+                <p class="title">一 讀</p>
+              </div>
+              <div class="col-xs-4">
+                <p class="title">審查委員會</p>
+              </div>
+            </div>
+            <div class="section margin-medium" data-stage="1">
+              <div class="death row"></div>
+            </div>
+            <div class="section margin-medium" data-stage="2">
+              <div class="death row"></div>
+            </div>
+            <div class="section margin-medium" data-stage="3">
+              <div class="death row"></div>
+            </div>
+            <div class="section margin-medium" data-stage="0">
+              <div class="head">任何階段都會遇到的死法</div>
+              <div class="death row"></div>
+            </div>
+            <div class="buttons" style="height: 260px">
+              <div class="btn btn-again margin-medium" style="top: 0;">
+                <img src="assets/gameover/again.png">
+              </div>
+              <div class="btn btn-share margin-medium" style="top: 70px;">
+                <img src="assets/gameover/share.png">
+              </div>
+              <div class="btn btn-more margin-medium" style="top: 150px;">
+                <img src="assets/overview/more.png">
+              </div>
+            </div>
+          </div>
+          <div class="info-foot"></div>
+        </div>
       </div>
     </div>
-  </div>
-  <div id="info">
-    <img src="assets/gameover/others.png" class="margin-medium" style="display: block">
-    <div id="law"></div>
-    <img src="assets/gameover/down.png" class="btn btn-down margin-large">
-    <div id="overview">
-      <img src="assets/overview/title.png" class="margin-medium" style="display: block" data-sr="enter bottom, move 20px, over 1s">
-      <div class="section margin-medium" data-stage="1" data-sr="enter bottom, over 1s">
-        <span class="title">程序委員會</span>
-        <div class="death"></div>
-      </div>
-      <div class="section margin-medium" data-stage="2" data-sr="enter bottom, over 1s">
-        <span class="title">一&nbsp;讀</span>
-        <div class="death"></div>
-      </div>
-      <div class="section margin-medium" data-stage="3" data-sr="enter bottom, over 1s">
-        <span class="title">審查委員會</span>
-        <div class="death"></div>
-      </div>
-      <div class="section margin-medium" data-stage="0" data-sr="enter bottom, over 1s">
-        <div class="head">任何階段都會遇到的死法</div>
-        <div class="death"></div>
-      </div>
-      <a href="#" class="btn btn-share margin-large"></a>
-      <a href="#" class="btn btn-more margin-large"></a>
-    </div>
-    <div class="info-foot"></div>
   </div>
   <div id="orientation"></div>
 
