--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <!-- /build -->
 </head>
 
-<body>
+<body class="bg-orange">
   <div id="game-wrapper">
     <div id="legi-game" class="game" style="font-family: 'Heiti TC', 'Microsoft YaHei'"></div>
     <div id="gameoverlay">
@@ -69,6 +69,7 @@
             <div class="section margin-medium" data-stage="3">
               <div class="death row"></div>
             </div>
+            <div class="scrolltofixed-end"></div>
             <div class="section margin-medium" data-stage="0">
               <div class="head">任何階段都會遇到的死法</div>
               <div class="death row"></div>
